--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/themes": "^3.1.4",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^0.1.7",
     "embla-carousel-react": "^8.3.0",
@@ -38,8 +39,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
